--- a/produtos/templates/produtos/atualiza.html
+++ b/produtos/templates/produtos/atualiza.html
@@ -26,8 +26,7 @@
             Perfil
           </a>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Editar</a>
-            <a class="dropdown-item" href="#">Sair</a>
+            <a class="dropdown-item" href="{% url 'accounts:logout' %}">Sair</a>
           </div>
         </li>
       </ul>
