Configuração para deploy

--- a/gestao_produtos/templates/gestao_produtos/_layouts/base.html
+++ b/gestao_produtos/templates/gestao_produtos/_layouts/base.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
         <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="{% static 'gestao_produtos/css/bootstrap.css' %}">
+        <link rel="stylesheet" href="{% static 'gestao_produtos/css/bootstrap.min.css' %}">
         <link rel="stylesheet" href="{% static 'gestao_produtos/css/style.css' %}">
 
         <title>{% block title %}Title{% endblock %}</title>
@@ -22,9 +22,9 @@
 
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-        <script src="{% static 'gestao_produtos/js/jquery.js' %}"></script>
-        <script src="{% static 'gestao_produtos/js/popper.js' %}"></script>
-        <script src="{% static 'gestao_produtos/js/bootstrap.js' %}"></script>
+        <script src="{% static 'gestao_produtos/js/jquery.min.js' %}"></script>
+        <script src="{% static 'gestao_produtos/js/popper.min.js' %}"></script>
+        <script src="{% static 'gestao_produtos/js/bootstrap.min.js' %}"></script>
         <script src="{% static 'gestao_produtos/js/validacao.js' %}"></script>
     </body>
 </html>
