--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -14,7 +14,10 @@
         <div class="row">
           <div class="col">
             <div class="alert alert-danger alert-dismissible fade show" role="alert">
-              <strong>Erro!</strong> Username ou senha inválida.
+              <strong>Erro!</strong>
+              {% for error in form.non_field_errors %}
+                {{ error }}
+              {% endfor %}
               <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
