--- a/gestao_produtos/templates/gestao_produtos/index.html
+++ b/gestao_produtos/templates/gestao_produtos/index.html
@@ -30,9 +30,7 @@
               <div class="tab-content" id="nav-tabContent">
                 <div class="tab-pane fade show active" id="list-reg" role="tabpanel" aria-labelledby="list-home-list">
                   Você pode criar uma conta <b>Username</b> e <b>Senha</b> que você usara para se autenticar na
-                  aplicação. Algumas coisa ainda não estão 100% (risos), por exemplo, inda não estou pegando as mensagem
-                  de validalição quando algo está errado, senha muito custa por exemplo. Mas em breve estara
-                  funcionando. Para criar uma conta click <a href="{% url 'accounts:signup' %}">aqui</a>.
+                  aplicação. Para criar uma conta click <a href="{% url 'accounts:signup' %}">aqui</a>.
                 </div>
                 <div class="tab-pane fade" id="list-login" role="tabpanel" aria-labelledby="list-profile-list">
                   Depois que você criar uma conta ou caso você já tenha uma pode fazer login <a href="{% url 'accounts:login' %}">aqui</a>.
